--- a/Cópia_de_ifg_ia_estatistica_atividade_3_osvaldo.ipynb
+++ b/Cópia_de_ifg_ia_estatistica_atividade_3_osvaldo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc0AL+MUh+nJaD2UBHS9eU",
+      "authorship_tag": "ABX9TyPsUbDxVR7KzJv39jxBaXF2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,13 +223,223 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Questão 2. Teste para média em amostra única\n",
+        "Cinquenta dados de magnitude foram selecionados aleatoriamente de 10.594 terremotos registrados em um ano, em uma localidade no sul da Califórnia. Estes valores estão exibidos logo abaixo\n",
+        "Os dados são do Southern California Earthquake Data Center (Centro de Dados de Terremotos da Califórnia do Sul). Deseja-se verificar se a população de terremotos tem uma magnitude média maior do que 1,00. Use o nível de significância de 0,05.\n",
+        "\n",
+        "0.70, 2.20, 1.64, 1.01, 1.62, 1.28, 0.92, 1.00, 1.49, 1.42,\n",
+        "0.74, 1.98, 1.32, 1.26, 1.83, 0.83, 1.00, 2.24, 0.84, 1.35,\n",
+        "0.64, 0.64, 2.95, 0.00, 0.99, 1.34, 0.79, 2.50, 1.42, 0.93,\n",
+        "0.39, 1.22, 0.90, 0.65, 1.56, 0.54, 0.79, 1.79, 1.00, 0.40,\n",
+        "0.70, 0.20, 1.76, 1.46, 0.40, 1.25, 1.44, 1.25, 1.25, 1.39.\n",
+        "\n",
+        "Pede-se: Use um teste \"t\" para essa análise; Lembre-se que uma premissa desse teste é que os dados sejam normalmente distribuídos."
+      ],
       "metadata": {
-        "id": "YVAr0RY-neXE"
+        "id": "eglaP0ML2Aqi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Teste de Hipóteses para Média em Amostra Única\n",
+        "\n",
+        "H0: A média da população de terremotos é igual a 1.00.\n",
+        "\n",
+        "H1: A média da população de terremotos é maior que 1.00."
+      ],
+      "metadata": {
+        "id": "9kc3_v99CaEL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cálculo do p-valor para o Teste t\n",
+        "from scipy.stats import ttest_1samp\n",
+        "\n",
+        "# Dados fornecidos\n",
+        "dados_terremotos = [0.70, 2.20, 1.64, 1.01, 1.62, 1.28, 0.92, 1.00, 1.49, 1.42, 0.74, 1.98, 1.32, 1.26, 1.83, 0.83, 1.00, 2.24, 0.84, 1.35, 0.64, 0.64, 2.95, 0.00, 0.99, 1.34, 0.79, 2.50, 1.42, 0.93, 0.39, 1.22, 0.90, 0.65, 1.56, 0.54, 0.79, 1.79, 1.00, 0.40, 0.70, 0.20, 1.76, 1.46, 0.40, 1.25, 1.44, 1.25, 1.25, 1.39]\n",
+        "\n",
+        "# Parâmetro da população a ser testado\n",
+        "media_populacional = 1.00\n",
+        "\n",
+        "# Teste t de uma amostra\n",
+        "stat_t, p_valor_t = ttest_1samp(dados_terremotos, media_populacional)\n",
+        "\n",
+        "# Resultado do teste t\n",
+        "print(f\"Estatística de Teste t: {stat_t}\")\n",
+        "print(f\"P-valor t: {p_valor_t}\")\n",
+        "\n",
+        "# Conclusão\n",
+        "if p_valor_t < 0.05:\n",
+        "    print(\"Rejeitamos a hipótese nula. Há evidências estatísticas para suportar H1. A média é maior que 1.00.\")\n",
+        "else:\n",
+        "    print(\"Não há evidências suficientes para rejeitar a hipótese nula. Não temos suporte estatístico para afirmar que a média é maior que 1.00.\")"
+      ],
+      "metadata": {
+        "id": "YVAr0RY-neXE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8452ba1c-d5b7-4e8f-9402-17691ef2ec56"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estatística de Teste t: 2.2177030211179622\n",
+            "P-valor t: 0.03124317390958031\n",
+            "Rejeitamos a hipótese nula. Há evidências estatísticas para suportar H1. A média é maior que 1.00.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Questão 3. Teste para proporcção em amostra única.\n",
+        "Quando Mendel realizou seus famosos experimentos sobre genética, uma amostra de descendentes consistia em 428 ervilhas verdes e 152 ervilhas amarelas. Teste a um nível de significância de 5%, a afirmativa de Mendel de que, sob as mesmas circunstâncias, 25% das ervilhas descendentes seriam amarelas."
+      ],
+      "metadata": {
+        "id": "_t4thHINDLBy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Teste de Hipóteses para Proporção em Amostra Única\n",
+        "\n",
+        "H0: A proporção de ervilhas amarelas é igual a 0.25 (25%).\n",
+        "\n",
+        "H1: A proporção de ervilhas amarelas é diferente de 0.25 (25%).\n"
+      ],
+      "metadata": {
+        "id": "CdmCkWkNDjab"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cálculo do p-valor para o Teste de Proporção\n",
+        "from statsmodels.stats.proportion import proportions_ztest\n",
+        "\n",
+        "# Dados fornecidos\n",
+        "ervilhas_verdes = 428\n",
+        "ervilhas_amarelas = 152\n",
+        "total_ervilhas = ervilhas_verdes + ervilhas_amarelas\n",
+        "\n",
+        "# Proporção esperada segundo Mendel\n",
+        "prop_mendel = 0.25\n",
+        "\n",
+        "# Teste z para proporção\n",
+        "stat_z, p_valor_prop = proportions_ztest(count=ervilhas_amarelas, nobs=total_ervilhas, value=prop_mendel)\n",
+        "\n",
+        "# Resultado do teste de proporção\n",
+        "print(f\"Estatística de Teste Z: {stat_z}\")\n",
+        "print(f\"P-valor para Proporção: {p_valor_prop}\")\n",
+        "\n",
+        "# Conclusão\n",
+        "alpha = 0.05\n",
+        "if p_valor_prop < alpha:\n",
+        "    print(\"Rejeitamos a hipótese nula. Há evidências estatísticas para suportar H1. A proporção é diferente de 25%.\")\n",
+        "else:\n",
+        "    print(\"Não há evidências suficientes para rejeitar a hipótese nula. Não temos suporte estatístico para afirmar que a proporção é diferente de 25%.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8bj7rKMYDg6K",
+        "outputId": "0520939f-ee5f-4928-943d-2ca4d84884c3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estatística de Teste Z: 0.6609496216513362\n",
+            "P-valor para Proporção: 0.5086446219342684\n",
+            "Não há evidências suficientes para rejeitar a hipótese nula. Não temos suporte estatístico para afirmar que a proporção é diferente de 25%.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Questão 4. Teste para comparar médias de duas amostras pareadas.\n",
+        "O gerente de uma empresa de táxi está tentando decidir se o uso de novo tipo de pneus aumenta a economia de combustível de sua frota. Doze carros foram equipados com os novos pneus e conduzidos por um curso de teste pré-estabelecido. Sem mudar de motorista, os mesmos carros foram então equipados com pneus dos mesmos tipos anteriores e conduzidos novamente durante o curso de teste. O consumo de gasolina, em quilômetros por litro, foi registrado como segue:"
+      ],
+      "metadata": {
+        "id": "y2bEGTEXIlX8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Formulação das Hipóteses:**\n",
+        "\n",
+        "Teste de Hipóteses para Comparação de Médias de Amostras Pareadas\n",
+        "\n",
+        "H0: A diferença média entre os consumos de gasolina (pneus antigos - pneus novos) é igual a 0.\n",
+        "\n",
+        "H1: A diferença média entre os consumos de gasolina (pneus antigos - pneus novos) é menor que 0.\n",
+        "\n",
+        "# **Cálculo do p-valor**"
+      ],
+      "metadata": {
+        "id": "82BYFUBwIh0b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cálculo do p-valor para o Teste t pareado\n",
+        "from scipy.stats import ttest_rel\n",
+        "\n",
+        "# Dados fornecidos\n",
+        "consumo_antigo = [4.2, 4.7, 6.6, 7.0, 6.7, 4.5, 5.7, 6.0, 7.4, 4.9, 6.1, 5.2]\n",
+        "consumo_novo = [4.1, 4.9, 6.2, 6.9, 6.8, 4.4, 5.7, 5.8, 6.9, 4.7, 6.0, 5.9]\n",
+        "\n",
+        "# Teste t pareado\n",
+        "stat_t_pareado, p_valor_t_pareado = ttest_rel(consumo_antigo, consumo_novo)\n",
+        "\n",
+        "# Resultado do teste t pareado\n",
+        "print(f\"Estatística de Teste t pareado: {stat_t_pareado}\")\n",
+        "print(f\"P-valor t pareado: {p_valor_t_pareado}\")\n",
+        "\n",
+        "# Conclusão\n",
+        "alpha = 0.05\n",
+        "if p_valor_t_pareado < alpha:\n",
+        "    print(\"Rejeitamos a hipótese nula. Há evidências estatísticas para suportar H1. Os novos pneus proporcionam maior economia de combustível.\")\n",
+        "else:\n",
+        "    print(\"Não há evidências suficientes para rejeitar a hipótese nula. Não temos suporte estatístico para afirmar que os novos pneus proporcionam maior economia de combustível.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sL3j54LhJHhk",
+        "outputId": "f35c9dbd-7ba5-4a83-cf62-febbf77dfaa1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estatística de Teste t pareado: 0.6606339735160173\n",
+            "P-valor t pareado: 0.522441570511446\n",
+            "Não há evidências suficientes para rejeitar a hipótese nula. Não temos suporte estatístico para afirmar que os novos pneus proporcionam maior economia de combustível.\n"
+          ]
+        }
+      ]
     }
   ]
 }
