--- a/ifg_ia_estatistica_atividade_3_osvaldo.ipynb
+++ b/ifg_ia_estatistica_atividade_3_osvaldo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDyioGiJ5iD2shW4pZeJol",
+      "authorship_tag": "ABX9TyNquiCQR2m6J1ujHWgtQF+L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,25 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/iSwami/IFG-IA/blob/main/ifg_ia_estatistica_atividade_3_osvaldo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Instituto Federal de Goiás\n",
+        "\n",
+        "Curso: Especialização em Inteligência Artificial\n",
+        "\n",
+        "Disciplina: Estatística Aplicada\n",
+        "\n",
+        "Semestre: 2023.2 - Módulo 2\n",
+        "\n",
+        "Professor: Eder Brito\n",
+        "\n",
+        "Aluno: Osvaldo Fabiano Júnior"
+      ],
+      "metadata": {
+        "id": "FQMS9t5jyhvN"
+      }
     },
     {
       "cell_type": "markdown",
